--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,8 +7,16 @@ plugins {
 
 android {
     namespace = "com.example.finpayconnect_seller"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdk = 34 // Set your project's compile SDK version (adjust as needed)
+
+    ndkVersion = "25.2.9519653" // Replace with your NDK version if required
+
+    defaultConfig {
+    applicationId "com.example.finpayconnect_seller"
+    minSdkVersion 23
+    targetSdkVersion 34
+    versionCode 1
+    versionName "1.0.0"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -16,29 +24,29 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
     }
+}
 
-    defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.finpayconnect_seller"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            // Enable ProGuard for release builds to shrink code and resources
+            // Uncomment and configure below if you have a proguard-rules.pro file
+            // minifyEnabled true
+            // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            // Signing config for release
+            signingConfig signingConfigs.debug // Replace with your release signing config
         }
     }
 }
 
 flutter {
+    // Flutter source directory
     source = "../.."
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.0" // Ensure Kotlin version matches your environment
 }
